Tue Mar 18 21:34:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Add Tom Winch.

Tue Mar 18 21:29:25 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/unittests/facet_hierarchy_1.py,xappy/indexerconnection.py,
	  xappy/searchconnection.py: Add support for defining a facet
	  heirarchy, for use when selecting facets.  Not yet used, but is
	  stored in the database configuration, and available to both the
	  indexer connection and the search connection.

Mon Mar 17 16:46:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix setting of stemmer so that it
	  still works with replaylog enabled.

Thu Feb 21 13:12:03 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to new tarballs which actually work,
	  this time.

Thu Feb 21 01:54:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Revert to earlier tarballs - the new ones
	  don't work.

Thu Feb 21 01:50:17 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update with new tarballs.

Thu Feb 21 01:23:46 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update the branchpoint version
	  numbers.

Tue Feb 05 09:59:50 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Upgrade version of xapian used to one which
	  contains database replication functionality.

Tue Feb 05 09:45:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/searchconnection_doctest3.txt: Add interface to
	  IndexerConnection for setting and getting metadata, and interface
	  to SearchConnection for getting metadata.

Mon Feb 04 00:58:05 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Cope with a facet being declared as
	  SORTABLE, but without a type, but of facet type float. (Treat the