@@ -113,22 +113,15 @@ class IndexerConnection(object):
 
         """
         assert self._index is not None
+
         config_str = _cPickle.dumps((
                                      self._field_actions,
                                      self._field_mappings.serialise(),
                                      self._facet_hierarchy,
                                      self._next_docid,
                                     ), 2)
+        _log(self._index.set_metadata, '_xappy_config', config_str)
 
-        # Old versions of xapian (before 1.0.3) didn't support metadata, so we
-        # may have to store the metadata in a file if we're using them.
-        if hasattr(self._index, 'set_metadata'):
-            _log(self._index.set_metadata, '_xappy_config', config_str)
-        else:
-            config_file = _os.path.join(self._indexpath, 'config')
-            fd = open(config_file, "wb")
-            fd.write(config_str)
-            fd.close()
         self._config_modified = False
 
     def _load_config(self):
@@ -137,22 +130,9 @@ class IndexerConnection(object):
         """
         assert self._index is not None
 
-        if hasattr(self._index, 'get_metadata'):
-            config_str = _log(self._index.get_metadata, '_xappy_config')
-        else:
-            config_str = ''
+        config_str = _log(self._index.get_metadata, '_xappy_config')
         if len(config_str) == 0:
-            # Backwards compatibility - the configuration used to be stored in
-            # a file.
-            config_file = _os.path.join(self._indexpath, 'config')
-            if not _os.path.exists(config_file):
-                return
-            fd = open(config_file, 'rb')
-            config_str = fd.read()
-            fd.close()
-            # Write it to a metadata key for future use
-            if hasattr(self._index, 'set_metadata_'):
-                _log(self._index.set_metadata, '_xappy_config', config_str)
+            return
 
         try:
             (self._field_actions, mappings, self._facet_hierarchy, self._next_docid) = _cPickle.loads(config_str)
@@ -161,6 +141,7 @@ class IndexerConnection(object):
             (self._field_actions, mappings, self._next_docid) = _cPickle.loads(config_str)
             self._facet_hierarchy = {}
         self._field_mappings = _fieldmappings.FieldMappings(mappings)
+
         self._config_modified = False
 
     def _allocate_id(self):
