@@ -1,3 +1,10 @@
+Wed Mar 19 01:42:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/indexerconnection.py,xappy/searchconnection.py: Remove
+	  backwards compatibility support for reading fieldactions from a
+	  file.  It just makes the code more complex, and xappy really
+	  needs to use a more recent version of xapian.
+
 Tue Mar 18 21:34:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* AUTHORS: Add Tom Winch.
